fix(Flow): improve the sidebar headings size for better UI alignment

--- a/src/app/modules/data/components/sidebar/sidebar.component.scss
+++ b/src/app/modules/data/components/sidebar/sidebar.component.scss
@@ -18,13 +18,15 @@
     }
 
     &__header {
-      @include elevate(1);
       background: var(--slate);
       font-weight: 400;
-      line-height: 1em;
+      line-height: 44px;
       list-style: none;
-      padding: 1.25em;
+      padding: 0 1.25em;
       font-size: 14px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       cursor: pointer;
 
       &:hover {
